--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
                 </p>
                 <ol>
                     <li>
+                        <p class="li-order">
+                            01
+                        </p>
                         <h3>Fill out our questionnaire</h3>
                         <p>
                             By clicking on "Start now" you can easily access our questionnaire,
@@ -231,6 +234,9 @@
                         </p>
                     </li>
                     <li>
+                        <p class="li-order">
+                            02
+                        </p>
                         <h3>We check your request</h3>
                         <p>
                             Based on your information, we will
@@ -239,6 +245,9 @@
                         </p>
                     </li>
                     <li>
+                        <p class="li-order">
+                            03
+                        </p>
                         <h3>We send you the contract</h3>
                         <p>
                             If we can help you, we will send you our contract
@@ -247,6 +256,9 @@
                         </p>
                     </li>
                     <li>
+                        <p class="li-order">
+                            04
+                        </p>
                         <h3>We get to work</h3>
                         <p>
                             Once we have all the required
