--- a/index.html
+++ b/index.html
@@ -380,7 +380,6 @@
                 </ul>
                 <button class="more-btn btn"> See more articles </button>
                 <!-- появятся больше новостей. не ссылка поэтому button-->
-                <!-- как сделать на весь раппер как a-->
             </div>
         </section>
         <section>
@@ -388,7 +387,7 @@
                 <h2> Frequently asked questions </h2>
                 <ul>
                     <li>
-                        <button class="btn">
+                        <button class="btn FAQ-btn">
                             Can you recover my wallet?
                             <img src="" alt="">
                         </button>
@@ -403,28 +402,28 @@
                         </p>
                     </li>
                     <li>
-                        <button class="btn">
+                        <button class="btn FAQ-btn">
                             Which wallets do you support?
                             <img src="" alt="">
                         </button>
                         <p>Здесь явно что-то будет</p>
                     </li>
                     <li>
-                        <button class="btn">
+                        <button class="btn FAQ-btn">
                             How do I start a request?
                             <img src="" alt="">
                         </button>
                         <p>Здесь явно что-то будет</p>
                     </li>
                     <li>
-                        <button class="btn">
+                        <button class="btn FAQ-btn">
                             How does payment work?
                             <img src="" alt="">
                         </button>
                         <p>Здесь явно что-то будет</p>
                     </li>
                     <li>
-                        <button class="btn">
+                        <button class="btn FAQ-btn">
                             Can I communicate with you in encrypted form?
                             <img src="" alt="">
                         </button>
