--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="wrapper header">
             <a href="index.html">
-                <img src="./assets/icons/ReWallet.png" alt="ReWallet">
+                <img src="./assets/icons/ReWallet.svg" alt="ReWallet">
             </a>
             <button class="btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -64,41 +64,41 @@
                     <ul class="wallet-list">
                         <li>
                             <a href="">
-                                <img src="./assets/icons/squares_1_.png" alt="">
+                                <img src="./assets/icons/squares_1_.svg" alt="">
                                 <p> Ledger Nano S </p>
                             </a>
 
                         </li>
                         <li>
                             <a href="">
-                                <img src="./assets/icons/blockchain.png" alt="">
+                                <img src="./assets/icons/Layer_x0020_1.svg" alt="">
                                 <p> Blockchain.com</p>
                             </a>
 
                         </li>
                         <li>
                             <a href="">
-                                <img src="./assets/icons/miltibit.png" alt="">
+                                <img src="./assets/icons/image 970.svg" alt="">
                                 <p> Multibit Wallet </p>
                             </a>
 
                         </li>
                         <li>
                             <a href="">
-                                <img src="./assets/icons/trezor.png" alt="">
+                                <img src="./assets/icons/Logos wallets.svg" alt="">
                                 <p> Trezor Wallet </p>
                             </a>
 
                         </li>
                         <li>
                             <a href="">
-                                <img src="./assets/icons/electrum.png" alt="">
+                                <img src="./assets/icons/Group.svg" alt="">
                                 <p> Electrum Wallet </p>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="./assets/icons/bitcoin.png" alt="">
+                                <img src="./assets/icons/Group (1).svg" alt="">
                                 <p> Bitcoin core </p>
                             </a>
                         </li>
@@ -491,7 +491,8 @@
                         <a href="mailto:team@rewallet.de"> <img src="./assets/icons/mail.svg" alt="email">
                             team@rewallet.de </a>
                         <a href="tel:+49(0)30235913270"> <img src="./assets/icons/tel.svg" alt="telephone"> +49
-                            (0) 30 2359 13270 </a>
+                            (0) 30 2359 13270 
+                        </a>
                     </div>
                 </div>
             </div>
@@ -571,9 +572,9 @@
 
         </div>
         <div class="wrapper footer_bottom">
-            <a href=""> <img src="./assets/icons/pngaaa 1.jpg" alt="Made in Germany"> </a>
+            <a href=""> <img src="./assets/icons/pngaaa 1.png" alt="Made in Germany"> </a>
             <!-- добавить описание внутрь ссылок через span -->
-            <a href=""> <img src="./assets/icons/Bundesblock_edited-1 1 (1).jpg" alt="Blockchain Bundesverband"></a>
+            <a href=""> <img src="./assets/icons/Bundesblock_edited-1 1.png" alt="Blockchain Bundesverband"></a>
             <!-- добавить описание внутрь ссылок через span -->
             <p> © Copyright 2023 ReWallet </p>
             <a href=""> Imprint </a>
