--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
                     completely.
                     We were unable to locate our wallets in the first place.
                 </p>
+                <a href="" class="about--link">
+                    Read more
+                    <img src="./assets/icons/arrow-right-bot.svg" alt="" >
+                </a>
                 <img src="./assets/icons/secureW.svg" class="secure-wallet" alt="secure wallet">
             </div>
         </section>
