--- a/grid.html
+++ b/grid.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./grid/style.css">
     <title>231-322 Супроткин Руслан</title>
 </head>
 
@@ -36,22 +36,22 @@
                 </div>
                 <div class="main-grid">
                     <div class="div1">
-                        <img src="./imgs/magicpattern-svg-chart-1.svg" alt="" width="cover">
+                        <img src="./grid/imgs/magicpattern-svg-chart-1.svg" alt="" width="cover">
                     </div>
                     <div class="div2">
-                        <img src="./imgs/2.svg" alt="" width="cover">
+                        <img src="./grid/imgs/2.svg" alt="" width="cover">
                     </div>
                     <div class="div3">
-                        <img src="./imgs/3.svg" alt="" width="cover">
+                        <img src="./grid/imgs/3.svg" alt="" width="cover">
                     </div>
                     <div class="div4">
-                        <img src="./imgs/4.svg" alt="" width="cover">
+                        <img src="./grid/imgs/4.svg" alt="" width="cover">
                     </div>
                     <div class="div5">
-                        <img src="./imgs/magicpattern-svg-chart-5.svg" alt="" width="cover">
+                        <img src="./grid/imgs/magicpattern-svg-chart-5.svg" alt="" width="cover">
                     </div>
                     <div class="div6">
-                        <img src="./imgs/magicpattern-svg-chart-6.svg" alt="" width="cover">
+                        <img src="./grid/imgs/magicpattern-svg-chart-6.svg" alt="" width="cover">
                     </div>
                 </div>
             </div>
