--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section class="partners">
             <div class="wrapper">
                 <h2> partners </h2>
-                <ul>
+                <ul >
                     <li>
                         <a href="">
                             <img src="./assets/icons/logo-finanzen-net 1.png" alt="">
@@ -348,7 +348,7 @@
                 <ul class="articles">
                     <li>
                         <a href="index.html">
-                            <img src="./assets/icons/news-1.jpg" alt="News preview" width="100%">
+                            <img src="./assets/icons/news-1.jpg" alt="News preview" class="blog--articles--news-img">
                             <div class="article-info">
                                 <p> <img src="./assets/icons/image 978.jpg" alt="Bruno Krauss" class="author-photo">
                                     Bruno Krauss </p>
@@ -363,7 +363,7 @@
                     </li>
                     <li>
                         <a href="index.html">
-                            <img src="./assets/icons/news-1.jpg" alt="News preview" width="100%">
+                            <img src="./assets/icons/news-1.jpg" alt="News preview" class="blog--articles--news-img">
                             <div class="article-info">
                                 <p> <img src="./assets/icons/image 978.jpg" alt="Bruno Krauss" class="author-photo">
                                     Bruno Krauss </p>
@@ -379,7 +379,7 @@
                     </li>
                     <li>
                         <a href="index.html">
-                            <img src="./assets/icons/news-1.jpg" alt="News preview" width="100%">
+                            <img src="./assets/icons/news-1.jpg" alt="News preview" class="blog--articles--news-img">
                             <div class="article-info">
                                 <p> <img src="./assets/icons/image 978.jpg" alt="Bruno Krauss" class="author-photo">
                                     Bruno Krauss </p>
