--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="landing">
             <div class="wrapper">
                 <div>
-                    <h1> ReWallet - Wallet recovery service </h1>
+                    <h1 class="sr-only"> ReWallet - Wallet recovery service </h1>
                     <p class="heading"> Regain access to your <strong> crypto wallet </strong> </p>
                     <!-- Тексты не переход на новоб строку вовремя. Слишком длинный. Не только здесь-->
                     <p>
@@ -110,7 +110,7 @@
         </section>
         <section class="partners">
             <div class="wrapper">
-                <h2> partners </h2>
+                <h2 class="sr-only"> Our partners </h2>
                 <ul >
                     <li>
                         <a href="">
@@ -525,6 +525,9 @@
                     <li>
                         <a href=""> Blog </a>
                     </li>
+                    <li>
+                        <a href="grid.html" target="_blank"> Grid.html </a>
+                    </li>
                 </ul>
             </nav>
             <svg class="trustpilot-logo" xmlns="http://www.w3.org/2000/svg" width="120" height="30" viewBox="0 0 120 30"
@@ -570,7 +573,6 @@
                         d="M13.0767 5.19063C13.4183 4.36934 14.5817 4.36934 14.9233 5.19063L16.9395 10.0381C17.0835 10.3843 17.4091 10.6209 17.7829 10.6508L23.0161 11.0704C23.9027 11.1414 24.2623 12.248 23.5867 12.8266L19.5996 16.242C19.3148 16.486 19.1904 16.8688 19.2774 17.2335L20.4956 22.3402C20.702 23.2055 19.7607 23.8893 19.0016 23.4257L14.5213 20.6891C14.2012 20.4936 13.7988 20.4936 13.4787 20.6891L8.9984 23.4257C8.2393 23.8893 7.29805 23.2055 7.50444 22.3402L8.72257 17.2335C8.80958 16.8688 8.68521 16.486 8.40042 16.242L4.41328 12.8266C3.73774 12.248 4.09727 11.1414 4.98392 11.0704L10.2171 10.6508C10.5909 10.6209 10.9165 10.3843 11.0605 10.0381L13.0767 5.19063Z"
                         fill="#F7931A" />
                 </svg>
-                <!-- собрать вместе -->
                 <p class="score"> 4.9 </p>
             </div>
 
