--- a/form.html
+++ b/form.html
@@ -72,7 +72,7 @@
                         <!-- Как покрасить текс плейсходера даты в белый?-->
                         <input id="bdate" type="date" required class="required">
                     </label>
-                    <label for="gender" >
+                    <label for="gender" class="form--gender" >
                         Gender
                         <label for="Male" class="form--gender-male">
                             Male
