--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         </p>
                     </li>
                 </ul>
-                <form id="form" class="dark">
+                <form id="form" action="" class="dark" method="GET" autocomplete="on" enctype="application/x-www-form-urlencoded">
                     <div class="form-wrapper">
                         <button class="checkmark"></button>
                         <button class="checkmark"></button>
