--- a/grid.html
+++ b/grid.html
@@ -72,22 +72,22 @@
                     </div>
                     <div class="main-grid">
                         <div class="div1">
-                            <img src="./grid/imgs/magicpattern-svg-chart-1.svg" alt="" width="cover">
+                            <img src="./grid/imgs/magicpattern-svg-chart-1.svg" alt="" >
                         </div>
                         <div class="div2">
-                            <img src="./grid/imgs/2.svg" alt="" width="cover">
+                            <img src="./grid/imgs/2.svg" alt="" >
                         </div>
                         <div class="div3">
-                            <img src="./grid/imgs/3.svg" alt="" width="cover">
+                            <img src="./grid/imgs/3.svg" alt="" >
                         </div>
                         <div class="div4">
-                            <img src="./grid/imgs/4.svg" alt="" width="cover">
+                            <img src="./grid/imgs/4.svg" alt="" >
                         </div>
                         <div class="div5">
-                            <img src="./grid/imgs/magicpattern-svg-chart-5.svg" alt="" width="cover">
+                            <img src="./grid/imgs/magicpattern-svg-chart-5.svg" alt="">
                         </div>
                         <div class="div6">
-                            <img src="./grid/imgs/magicpattern-svg-chart-6.svg" alt="" width="cover">
+                            <img src="./grid/imgs/magicpattern-svg-chart-6.svg" alt="" >
                         </div>
                     </div>
                 </div>
