--- a/index.html
+++ b/index.html
@@ -114,32 +114,32 @@
                 <ul >
                     <li>
                         <a href="">
-                            <img src="./assets/icons/logo-finanzen-net 1.png" alt="">
+                            <img src="./assets/icons/logo-finanzen-net 1.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="./assets/icons/finanzfluss-logo-and-text.cfe8d93 1.png" alt="">
+                            <img src="./assets/icons/blocktrainer-logo-web 1.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="./assets/icons/blocktrainer-logo-web 1.png" alt="">
+                            <img src="./assets/icons/finanzfluss-logo-and-text.cfe8d93 1.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="./assets/icons/Company logo.png" alt="">
+                            <img src="./assets/icons/Company logo.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="./assets/icons/cointele.png" alt="">
+                            <img src="./assets/icons/download 1.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="./assets/icons/b2go-lightmode 1.png" alt="">
+                            <img src="./assets/icons/b2go-lightmode 1.svg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -214,7 +214,7 @@
                     Read more
                     <img src="./assets/icons/arrow-right-bot.svg" alt="" >
                 </a>
-                <img src="./assets/icons/secureW.svg" class="secure-wallet" alt="secure wallet">
+                <img src="./assets/icons/secure_wallet.png" class="secure-wallet" alt="secure wallet">
             </div>
         </section>
         <section>
@@ -472,15 +472,22 @@
                 </ul>
                 <form id="form" action="" class="dark" method="GET" autocomplete="on" enctype="application/x-www-form-urlencoded">
                     <div class="form-wrapper">
-                        <button class="checkmark"></button>
-                        <button class="checkmark"></button>
-                        <button class="checkmark"></button>
-                        <button class="checkmark"></button>
-                        <p>What wallet is it?</p>
-                        <button class="btn"> Bitcoin </button>
-                        <button class="btn"> Ethereum (ERC-20) </button>
-                        <button class="btn"> Dogecoin </button>
-                        <button class="btn"> Other </button>
+                        <fieldset class="form--header">
+                            <!-- Как сделать верхний-->
+                            <input type="checkbox" name="checkbox" class="checkbox">
+                            <input type="checkbox" name="checkbox" class="checkbox">
+                            <input type="checkbox" name="checkbox" class="checkbox">
+                            <input type="checkbox" name="checkbox" class="checkbox">
+                        </fieldset>
+
+                        <fieldset class="form---main">
+                            <legend>What wallet is it?</legend>
+                            <button class="btn"> Bitcoin </button>
+                            <button class="btn"> Ethereum (ERC-20) </button>
+                            <button class="btn"> Dogecoin </button>
+                            <button class="btn"> Other </button>
+                        </fieldset>
+
                     </div>
                 </form>
             </div>
@@ -508,26 +515,27 @@
             <nav>
                 <ul>
                     <li>
-                        <a href=""> Why ReWallet? </a>
+                        <a href="#why-rewallet"> Why ReWallet? </a>
                     </li>
                     <li>
-                        <a href=""> About us </a>
+                        <a href="#about"> About us </a>
                     </li>
                     <li>
-                        <a href=""> How does it work </a>
+                        <a href="#process"> How does it work </a>
                     </li>
                     <li>
-                        <a href=""> FAQ </a>
+                        <a href="#FAQ"> FAQ </a>
                     </li>
                     <li>
-                        <a href=""> Wallets </a>
+                        <a href="#form"> Wallets </a>
                     </li>
                     <li>
-                        <a href=""> Blog </a>
+                        <a href="#blog"> Blog </a>
                     </li>
                     <li>
                         <a href="grid.html" target="_blank"> Grid.html </a>
                     </li>
+                    <li><a href="form.html" target="_blank">Form.html</a></li>
                 </ul>
             </nav>
             <svg class="trustpilot-logo" xmlns="http://www.w3.org/2000/svg" width="120" height="30" viewBox="0 0 120 30"
@@ -578,9 +586,9 @@
 
         </div>
         <div class="wrapper footer_bottom">
-            <a href=""> <img src="./assets/icons/pngaaa 1.png" alt="Made in Germany"> </a>
+            <a href=""> <img src="./assets/icons/pngaaa 1.svg" alt="Made in Germany"> </a>
             <!-- добавить описание внутрь ссылок через span -->
-            <a href=""> <img src="./assets/icons/Bundesblock_edited-1 1.png" alt="Blockchain Bundesverband"></a>
+            <a href=""> <img src="./assets/icons/Bundesblock_edited-1 1.svg" alt="Blockchain Bundesverband"></a>
             <!-- добавить описание внутрь ссылок через span -->
             <p> © Copyright 2023 ReWallet </p>
             <a href=""> Imprint </a>
