--- a/form.html
+++ b/form.html
@@ -89,7 +89,8 @@
           </ul>
           <label for="password">
             Password
-            <input id="password" type="password" minlength="8" maxlength="32" required class="required">
+            <input id="password" type="password" minlength="8" maxlength="32" required class="required"
+              placeholder="S0mething_funny!">
           </label>
         </fieldset>
         <fieldset class="form--main-mid">
