--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@
         <nav class="side-nav">
             <ul>
                 <li>
-                    <a href=""> Why ReWallet? </a>
+                    <a href="#why-rewallet"> Why ReWallet? </a>
                 </li>
                 <li>
-                    <a href=""> About us </a>
+                    <a href="#about"> About us </a>
                 </li>
                 <li>
-                    <a href=""> How does it work </a>
+                    <a href="#process"> How does it work </a>
                 </li>
                 <li>
-                    <a href=""> FAQ </a>
+                    <a href="#FAQ"> FAQ </a>
                 </li>
                 <li>
-                    <a href=""> Wallets </a>
+                    <a href="#form"> Wallets </a>
                 </li>
                 <li>
-                    <a href=""> Blog </a>
+                    <a href="#blog"> Blog </a>
                 </li>
+                <li>
+                    <a href="grid.html" target="_blank"> Grid.html </a>
+                </li>
+                <li><a href="form.html" target="_blank">Form.html</a></li>
             </ul>
         </nav>
     </header>
@@ -111,7 +115,7 @@
         <section class="partners">
             <div class="wrapper">
                 <h2 class="sr-only"> Our partners </h2>
-                <ul >
+                <ul>
                     <li>
                         <a href="">
                             <img src="./assets/icons/logo-finanzen-net 1.svg" alt="">
@@ -212,7 +216,7 @@
                 </p>
                 <a href="" class="about--link">
                     Read more
-                    <img src="./assets/icons/arrow-right-bot.svg" alt="" >
+                    <img src="./assets/icons/arrow-right-bot.svg" alt="">
                 </a>
                 <img src="./assets/icons/secure_wallet.png" class="secure-wallet" alt="secure wallet">
             </div>
@@ -470,7 +474,8 @@
                         </p>
                     </li>
                 </ul>
-                <form id="form" action="" class="dark" method="GET" autocomplete="on" enctype="application/x-www-form-urlencoded">
+                <form id="form" action="" class="dark" method="GET" autocomplete="on"
+                    enctype="application/x-www-form-urlencoded">
                     <div class="form-wrapper">
                         <fieldset class="form--header">
                             <!-- Как сделать верхний-->
@@ -502,7 +507,7 @@
                         <a href="mailto:team@rewallet.de"> <img src="./assets/icons/mail.svg" alt="email">
                             team@rewallet.de </a>
                         <a href="tel:+49(0)30235913270"> <img src="./assets/icons/tel.svg" alt="telephone"> +49
-                            (0) 30 2359 13270 
+                            (0) 30 2359 13270
                         </a>
                     </div>
                 </div>
@@ -583,7 +588,6 @@
                 </svg>
                 <p class="score"> 4.9 </p>
             </div>
-
         </div>
         <div class="wrapper footer_bottom">
             <a href=""> <img src="./assets/icons/pngaaa 1.svg" alt="Made in Germany"> </a>
