--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
       <form action="//httpbin.org/post" method="POST" autocomplete="on" enctype="application/x-www-form-urlencoded"
         name="register" class="dark form">
         <fieldset class="form--header">
-          <h1>Register</h1>
+          <h1>Sign up</h1>
         </fieldset>
         <fieldset class="form--main-top">
           <legend>Personal information</legend>
@@ -125,7 +125,7 @@
         </fieldset>
         <fieldset class="form--footer">
           <button type="submit" name="submit" class="btn submit--btn">
-            Submit
+            Sign up
           </button>
           <button type="reset" name="reset" class="btn reset--btn">
             Reset
