--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </ul>
                     <p class='rec-wallets'> and many others.</p>
                 </div>
-                <img class="Rewallet-wallet" src="./assets/icons/Rewallet-wallet.png" alt="">
+                <img class="Rewallet-wallet" src="./assets/icons/Layer_1.svg" alt="">
             </div>
         </section>
         <section class="partners">
@@ -218,7 +218,7 @@
                     Read more
                     <img src="./assets/icons/arrow-right-bot.svg" alt="">
                 </a>
-                <img src="./assets/icons/secure_wallet.png" class="secure-wallet" alt="secure wallet">
+                <img src="./assets/icons/secure-wallet.svg" class="secure-wallet" alt="secure wallet">
             </div>
         </section>
         <section>
