--- a/index.html
+++ b/index.html
@@ -217,9 +217,8 @@
                     completely.
                     We were unable to locate our wallets in the first place.
                 </p>
-                <a href="" class="about--link">
+                <a href="index.html" class="about--link">
                     Read more
-                    <img src="./assets/icons/arrow-right-bot.svg" alt="arrow pointed bottom-right">
                 </a>
                 <img src="./assets/icons/secure-wallet.svg" class="secure-wallet" alt="secure wallet">
             </div>
@@ -549,6 +548,7 @@
                         <a href="grid.html" target="_blank"> Grid.html </a>
                     </li>
                     <li><a href="form.html" target="_blank">Form.html</a></li>
+                    <li><a href="demo.html">Demo.html</a></li>
                 </ul>
             </nav>
             <svg class="trustpilot-logo" xmlns="http://www.w3.org/2000/svg" width="120" height="30" viewBox="0 0 120 30"
@@ -608,6 +608,7 @@
             <p> © Copyright 2023 ReWallet </p>
             <a href="index.html"> Imprint </a>
             <a href="index.html"> Privacy Policy </a>
+
         </div>
     </footer>
 </body>
