--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/demo.css">
-    <title>231-322 Ruslan Suprotkin</title>
+    <title>231-322 Супроткин Руслан</title>
 </head>
+
 <body>
-    <div class="card-container">
-        <div class="cardo back">
-            <p>back</p>
+<!-- карты находятся друг на друге, просто back перевёрнут и скрыт из-за css(rotate-y). При наведении позиции меняются-->
+    <div class="container">
+        <div class="card-container">
+            <div class="card">
+                <div class="front">
+                    <img src="./assets/demo/imgs/frnt.jpg" >
+                </div>
+                <div class="back">
+                   <img src="./assets/demo/imgs/bck.jpg" >
+                </div>
+            </div>
         </div>
-        <div class="card front">
-            <p>front</p>
-        </div>
-    </div>      
+
+    </div>
 </body>
+
 </html>
