--- a/form.html
+++ b/form.html
@@ -46,94 +46,205 @@
     </nav>
   </header>
   <main>
-    <div class="wrapper">
-      <form action="//httpbin.org/post" method="POST" autocomplete="on" enctype="application/x-www-form-urlencoded"
-        name="register" class="dark form">
-        <fieldset class="form--header">
-          <h1>Sign up</h1>
-        </fieldset>
-        <fieldset class="form--main-top">
-          <legend>Personal information</legend>
-          <label for="username">
-            Name
-            <input id="username" type="text" maxlength="50" placeholder="Your Name" required class="required" name="username">
-          </label>
+    <section>
+      <div class="wrapper">
+        <form action="//httpbin.org/post" method="POST" autocomplete="on" enctype="application/x-www-form-urlencoded"
+          name="register" class="dark form">
+          <fieldset class="form--header">
+            <h1>Sign up</h1>
+          </fieldset>
+          <fieldset class="form--main-top">
+            <legend>Personal information</legend>
+            <label for="username">
+              Name
+              <input id="username" type="text" maxlength="50" placeholder="Your Name" required class="required"
+                name="username">
+            </label>
 
-          <label for="bdate">
-            Date of birth
-            <!-- Как покрасить текс плейсходера даты в белый?-->
-            <input id="bdate" type="date" required class="required" name="birth_date">
-          </label>
-          <p>Gender </p>
+            <label for="bdate">
+              Date of birth
+              <!-- Как покрасить текс плейсходера даты в белый?-->
+              <input id="bdate" type="date" required class="required" name="birth_date">
+            </label>
+            <div>
+              <p>Gender </p>
 
-          <ul class="form--gender">
-            <li>
-              <label for="Male" class="form--gender-male">
-                Male
-                <input id="Male" type="radio" name="gender" value="Male">
-              </label>
-            </li>
-            <li>
-              <label for="Female" class="form--gender-female">
-                Female
-                <input id="Female" type="radio" name="gender" value="Female">
-              </label>
-            </li>
-            <li>
+              <ul class="form--gender">
+                <li>
+                  <label for="Male" class="form--gender--label">
+                    Male
+                    <input id="Male" type="radio" name="gender" value="Male">
+                  </label>
+                </li>
+                <li>
+                  <label for="Female" class="form--gender--label">
+                    Female
+                    <input id="Female" type="radio" name="gender" value="Female">
 
-              <label for="not_set" class="form--gender-not_set">
-                Prefer not to say
-                <input id="not_set" type="radio" name="gender" value="not_set">
-              </label>
-            </li>
-          </ul>
-          <label for="password">
-            Password
-            <input id="password" type="password" minlength="8" maxlength="32" required class="required"
-              placeholder="S0mething_funny!" name="password">
-          </label>
-        </fieldset>
-        <fieldset class="form--main-mid">
-          <legend>Your contacts</legend>
-          <label for="email">
-            Email
-            <input name="email" id="email" type="email" required class="required" placeholder="Mike_123!@rewallet.com">
-          </label>
-          <label for="tel">
-            Phone number
-            <!-- pattern американский тк я не знаю как писать "+" и "()" (и не знаю структуру русских номеров)-->
-            <input type="tel" name="tel" id="tel" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-          </label>
-          <label for="time" title="Shift+click to select multiple" class="form--time">
-            When should we call You
-            <!-- Как покрасить текс плейсходера в белый?-->
-            <select name="time" id="time" multiple required class="required">
-              <option value="morning">
-                Morning
-              </option>
-              <option value="noon">
-                Noon
-              </option>
-              <option value="evening">
-                Evening
-              </option>
-              <option value="night">
-                Night
-              </option>
-            </select>
-          </label>
-        </fieldset>
-        <fieldset class="form--footer">
-          <button type="submit" name="submit" class="btn submit--btn">
-            Sign up
-          </button>
-          <button type="reset" name="reset" class="btn reset--btn">
-            Reset
-          </button>
-        </fieldset>
-      </form>
-    </div>
+                  </label>
+                </li>
+                <li>
+
+                  <label for="not_set" class="form--gender--label">
+                    Prefer not to say
+                    <input id="not_set" type="radio" name="gender" value="not_set">
+                  </label>
+                </li>
+              </ul>
+            </div>
+
+            <label for="password">
+              Password
+              <input id="password" type="password" minlength="8" maxlength="32" required class="required"
+                placeholder="S0mething_funny!" name="password">
+            </label>
+          </fieldset>
+          <fieldset class="form--main-mid">
+            <legend>Your contacts</legend>
+            <label for="email">
+              Email
+              <input name="email" id="email" type="email" required class="required"
+                placeholder="Mike_123!@rewallet.com">
+            </label>
+            <label for="tel">
+              Phone number
+              <!-- pattern американский тк я не знаю как писать "+" и "()" (и не знаю структуру русских номеров)-->
+              <input type="tel" name="tel" id="tel" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+            </label>
+            <label for="time" title="Shift+click to select multiple" class="form--time">
+              When should we call You
+              <!-- Как покрасить текс плейсходера в белый?-->
+              <select name="time" id="time" multiple required class="required">
+                <option value="morning">
+                  Morning
+                </option>
+                <option value="noon">
+                  Noon
+                </option>
+                <option value="evening">
+                  Evening
+                </option>
+                <option value="night">
+                  Night
+                </option>
+              </select>
+            </label>
+          </fieldset>
+          <fieldset class="form--footer">
+            <button type="submit" name="submit" class="btn submit--btn">
+              Sign up
+            </button>
+            <button type="reset" name="reset" class="btn reset--btn">
+              Reset
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+    <section>
+      <div class="wrapper">
+        <form action="" class="dark dl-form">
+          <fieldset>
+            <legend>Псевдо</legend>
+            <dl>
+              <dt>Псевдоэлемент</dt>
+              <dd>Ключевое слово, добавляемое к селектору, которое позволяет стилизовать определённую часть выбранного
+                элемента.</dd>
+              <dt>Псевдокласс</dt>
+              <dd>Селектор, который выбирает элементы, находящиеся в специфическом состоянии, например, они являются
+                первым элементом своего типа, или на них наведён указатель мыши.</dd>
+            </dl>
+
+          </fieldset>
+          <fieldset class="pseudo-classes">
+
+            <legend>Псевдоклассы</legend>
+            <ul>
+              <li>
+                <label for="">
+                  :has
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  :checked
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  :active
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  :hover
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  :not()
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  :link
+                  <input type="checkbox">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="pseudo-elements">
+            <legend>Псевдоэлементы</legend>
+            <ul>
+              <li>
+                <label for="">
+                  ::after
+                  <input type="checkbox">
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  ::cue
+                  <input type="checkbox">
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  ::selection
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  ::first-line
+                  <input type="checkbox">
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  ::first-letter
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+              <li>
+                <label for="">
+                  ::before
+                  <input type="checkbox" checked>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+
   </main>
+
   <footer>
     <div class="wrapper footer_top">
       <a href="index.html"><img src="./assets/icons/ReWallet.png" alt="ReWallet" /></a>
