--- a/demo.html
+++ b/demo.html
@@ -21,8 +21,15 @@
                 </div>
             </div>
         </div>
-
     </div>
+    <section>
+        <div class="infinite-line">
+            <div>
+                <h1> <orange> Quick </orange>  🦊 jumps over the <brown> lazy </brown> 🐶 </h1>
+                <h1> <orange> Quick </orange>  🦊 jumps over the <brown> lazy </brown> 🐶 </h1>
+            </div>
+          </div>
+    </section>
 </body>
 
 </html>
