--- a/index.html
+++ b/index.html
@@ -480,14 +480,48 @@
                         </p>
                     </li>
                 </ul>
-                <form id="form" action="" class="dark" method="POST" autocomplete="on"
+                <form id="form" action="" class="dark form" method="POST" autocomplete="on"
                     enctype="application/x-www-form-urlencoded">
                     <div class="form-wrapper">
                         <fieldset class="form--header">
-                            <input type="checkbox" name="checkbox" class="checkbox" disabled>
-                            <input type="checkbox" name="checkbox" class="checkbox" disabled>
-                            <input type="checkbox" name="checkbox" class="checkbox" disabled>
-                            <input type="checkbox" name="checkbox" class="checkbox" disabled>
+                            <label>
+                                <input type="radio" name="form-radio">
+                                <span class="sr-only">First slide</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="form-radio">
+                                <span class="sr-only">First slide</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="form-radio">
+                                <span class="sr-only">First slide</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="form-radio">
+                                <span class="sr-only">First slide</span>
+                            </label>
+                            <!-- 
+ <label class="radio-dot-outline">
+                                <input type="radio" class="sr-only">
+                                <span class="sr-only">First Slide</span>
+                                <span class="radio-dot"></span>
+                            </label>
+                            <label class="radio-dot-outline">
+                                <input type="radio" class="sr-only">
+                                <span class="sr-only">First Slide</span>
+                                <span class="radio-dot"></span>
+                            </label>
+                            <label class="radio-dot-outline">
+                                <input type="radio" class="sr-only">
+                                <span class="sr-only">First Slide</span>
+                                <span class="radio-dot"></span>
+                            </label>
+                            <label class="radio-dot-outline">
+                                <input type="radio" class="sr-only">
+                                <span class="sr-only">First Slide</span>
+                                <span class="radio-dot"></span>
+                            </label>
+                            -->
                         </fieldset>
 
                         <fieldset class="form---main">
