--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             English
           </li>
           <li>
-            <a class="start-now-btn"> Start now </a>
+            <a class="start-now-btn" href="#form"> Start now </a>
           </li>
         </ul>
         <button class="btn">
